--- a/AnimalClinicAPI/appsettings.json
+++ b/AnimalClinicAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost,1433;Database=apbd;User Id=SA;Password=Adminxyz22#;Connect Timeout=20;TrustServerCertificate=True;"
+    "Default": "Server=localhost,1433;Database=master;User Id=SA;Password=Adminxyz22#;Connect Timeout=20;TrustServerCertificate=True;"
   }
 }
